Main functionality working.

--- a/options.html
+++ b/options.html
@@ -5,18 +5,10 @@
 
 Hidden pages:
 
-<select id="color">
- <option value="red">red</option>
- <option value="green">green</option>
- <option value="blue">blue</option>
- <option value="yellow">yellow</option>
-</select>
-
-<br>
-<div id="status"></div>
-<button id="save">Save</button>
 </body>
 
+<script src="jquery-2.0.0.min.js"></script>
+<script src="background.js"></script>
 <script src="options.js"></script>
 
 </html>
