Fully working (but ugly).

--- a/options.html
+++ b/options.html
@@ -4,11 +4,12 @@
 <body>
 
 Hidden pages:
+<ul id="pageList">
+</ul>
 
 </body>
 
 <script src="jquery-2.0.0.min.js"></script>
-<script src="background.js"></script>
 <script src="options.js"></script>
 
 </html>
